Add security hardening: rate limiting, CORS restriction, security headers
- Add Bucket4j rate limiting: login 5/min, register 3/min, general 100/min per IP
- Restrict CORS from wildcard to configured origins (freelance.kg in prod)
- Add HSTS, CSP, Referrer-Policy, Permissions-Policy headers to nginx
- Close Swagger/Actuator to admin-only access in production
- Hide health endpoint details in production

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>